tests/error/misc_errors/tuple_index_assignment.err
Error: Unsupported (at $FILE:6:4)
  | 
4 | def foo() -> None:
5 |     t = (1, 2, 3)
6 |     t[1] = 4
  |     ^^^^ Subscript assignments to non-arrays are not supported

Guppy compilation failed due to 1 previous error
